[build-system]
build-backend = "cmeel.build"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for simde"
license = "BSD-2-Clause"
name = "cmeel-simde"
requires-python = ">= 3.7"
version = "0.7.2"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-simde"
repository = "https://github.com/cmake-wheel/cmeel-simde.git"

[tool.cmeel]
any = true
build-number = 1
run-tests = false

[tool.tomlsort]
all = true
